--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css">
     <title>Web Portal Mahasiswa UBM</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <h1>Portal Mahasiswa S1</h1>
+    </nav>
+    <div class="content">
+        <div class="sidebar">
+            <img src="Fall-Guys-1.png">
+            <a href="">Home</a>
+            <a href="">Timetable</a>
+            <a href="">Score</a>
+            <a href="">Registration</a>
+        </div>
+        <div class="main">
+            <div class="title">
+                <h1>Dashboard</h1>
+                <img style="height: 60px;" src="Fall-Guys-1.png">
+            </div>
+            <div class="card">
+                <p>Jadwal Kelas</p>
+            </div>
+            <div class="card">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
