--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Jadwal Kelas</p>
             </div>
             <div class="card">
-                
+                Test
             </div>
         </div>
     </div>
