--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content">
         <div class="sidebar">
             <img src="Fall-Guys-1.png">
-            <a href="">Home</a>
+            <a style="background-color: aqua;" href="">Home</a>
             <a href="">Timetable</a>
             <a href="">Score</a>
             <a href="">Registration</a>
@@ -25,12 +25,32 @@
                 <h1>Dashboard</h1>
                 <img style="height: 60px;" src="Fall-Guys-1.png">
             </div>
-            <div class="card">
-                <p>Jadwal Kelas</p>
+            <div class="scroll-container">
+                <div class="title-row1">
+                    <p style="font-size: 20px; margin: 0;">Today's Class</p>
+                    <p style="font-size: 20px; margin: 0;">Assignment List</p>
+                </div>
+                 <div class="row1">
+                <div class="card">
+                    <p>Test</p>
+                </div>
+                <div class="card">
+                    <p>Test</p>
+                </div>
             </div>
-            <div class="card">
-                Test
-            </div>
+            <div class="title-row1">
+                    <p style="font-size: 20px; margin: 0;">News & Event</p>
+                    <p style="font-size: 20px; margin: 0;">B+ Connect</p>
+                </div>
+            <div class="row2">
+                <div class="card">
+                    <p>Test</p>
+                </div>
+                <div class="card">
+                    <p>Test</p>
+                </div>
+            </div>  
+            </div>    
         </div>
     </div>
 </body>
