--- a/index.html
+++ b/index.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css" />
     <title>Web Portal Mahasiswa UBM</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar">
+        <img src="menu-button.svg" style="width: 30px;">
         <h1>Portal Mahasiswa S1</h1>
     </nav>
     <div class="content">
-        <div class="sidebar">
-            <img src="Fall-Guys-1.png">
-            <a style="background-color: aqua;" href="">Home</a>
-            <a href="">Timetable</a>
-            <a href="">Score</a>
-            <a href="">Registration</a>
+      <div class="sidebar">
+        <img src="Fall-Guys-1.png" />
+        <a style="background-color: aqua" href="">Home</a>
+        <a href="">Timetable</a>
+        <a href="">Score</a>
+        <a href="">Registration</a>
+      </div>
+      <div class="main">
+        <div class="title">
+          <h1>Dashboard</h1>
+          <img style="height: 60px" src="Fall-Guys-1.png" />
         </div>
-        <div class="main">
-            <div class="title">
-                <h1>Dashboard</h1>
-                <img style="height: 60px;" src="Fall-Guys-1.png">
-            </div>
-            <div class="scroll-container">
-                <div class="title-row1">
+        <div class="scroll-container">
+            <div class="parent">
+                <div class="div1">
                     <p style="font-size: 20px; margin: 0;">Today's Class</p>
+                </div>
+                <div class="div2">
                     <p style="font-size: 20px; margin: 0;">Assignment List</p>
                 </div>
-                 <div class="row1">
-                <div class="card">
-                    <p>Test</p>
+                <div class="div3">
+                    <div class="card">
+                    Test
+                       </div>
                 </div>
-                <div class="card">
-                    <p>Test</p>
+                <div class="div4">
+                    <div class="card">
+                    Test
+                    </div>
                 </div>
-            </div>
-            <div class="title-row1">
+                <div class="div5">
                     <p style="font-size: 20px; margin: 0;">News & Event</p>
+                </div>
+                <div class="div6">
                     <p style="font-size: 20px; margin: 0;">B+ Connect</p>
                 </div>
-            <div class="row2">
-                <div class="card">
-                    <p>Test</p>
+                <div class="div7">
+                    <div class="card">
+                    Test
+                    </div>
                 </div>
-                <div class="card">
-                    <p>Test</p>
+                <div class="div8">
+                    <div class="card">
+                    Test
+                    </div>
                 </div>
-            </div>  
-            </div>    
+          </div>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
