--- a/regisactivity.html
+++ b/regisactivity.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="activitystyle.css" />
     <title>Web Portal Mahasiswa UBM</title>
-
-  </head>
-  <body>
+    </head>
+  
+    <body>
     <nav class="navbar">
       <img src="menu-button.svg" class="menu-btn" style="width: 30px;">
       <h1>Portal Mahasiswa S1</h1>
@@ -33,10 +33,13 @@
         </div>
            
             <div class="card">
-                <img style="height: 400px; transform:translate(5%, 5%);" src="epan.png">
-                <p style="transform:translate(34%, -1420%); font-size: 1.5rem;"><b>IMPACT 2026</b></p>
-                <p style="transform:translate(34%, -2220%); font-size: 1rem;">
-                This is where you put the description about the event in question.
+                <img style="height: 600px; transform:translate(5%, 5%);" src="poster.png">
+                <p style="transform:translate(35%, -2065%); font-size: 1.5rem;"><b>IMPACT 2026</b></p>
+            </div>
+
+            <div class="fluid-div">
+                <p style="transform:translate(27%, 0%); font-size: 1rem;">
+                This is where you put the description about the event in question.</p>
             </div>
 
             <div class="card2">
@@ -45,7 +48,7 @@
 
             <div class="card3">
                 <p style="transform:translate(28%, -40%); font-size: 0.9rem;"><b>Registration</b></p>
-                <img style="height: 200px; width: 200px; transform:translate(1%, 5%);" src="epan.png">
+                <img style="height: 205px; width: 205px; transform:translate(0.1%, 3%);" src="qr.png">
             </div>
 
           </div>
